--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "3.4.1",
     "redux": "^4.1.1",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "sweetalert2": "^11.12.0"
   },
   "scripts": {
     "start": "serve -s build",
